<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 Maxim Smolyakov
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<resources>
    <string name="new_workout_note">New workout note</string>
    <string name="undo_message">%1$s session has been removed</string>
    <string name="session_list_item_text_1">"Repetitions: %1$s"</string>
    <string name="session_list_item_text_2">"Break Duration: %1$s"</string>
    <string name="name_text_field_hint">Name</string>
    <string name="session_group_name">Session</string>
    <string name="break_duration_group_name">Break Duration</string>
    <string name="break_duration_field_hint">Seconds</string>
    <string name="repetitions_field_hint">Repetitions</string>
    <string name="session_name_field_hint">Name</string>
    <string name="no_sessions_img_description"><![CDATA[>Add sessions image]]></string>
    <string name="no_exercises_title">You have no exercises</string>
    <string name="no_exercises_message">Once you’ll add your\nfirst exercise you’ll be able view it here</string>
    <string name="action_details">details</string>
    <string name="action_done_title">done</string>
    <string name="invalid_name_format">Name cannot be empty</string>
    <string name="invalid_repetitions_format">Only positive integers are allowed</string>
    <string name="invalid_break_duration_format">Only positive integers are allowed</string>
</resources>